# HeroForge

./: .env.example  .gitignore  ACAS_IMPLEMENTATION_STATUS.md  ACCOUNT_LOCKOUT_IMPLEMENTATION.md  ANALYTICS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DATABASE_ENCRYPTION_IMPLEMENTATION.md  DATABASE_ENCRYPTION_MIGRATION.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  ENCRYPTION_QUICK_REFERENCE.md  EXAMPLES.md  FEATURE_ROADMAP_P1.md  FEATURE_ROADMAP_P2.md  FEATURE_ROADMAP_P3.md  FEATURE_ROADMAP_P4.md  GTM_EXECUTION_PLAYBOOK.md  HOW_TO_USE.md  HeroForgeFeatures.md  INVESTOR_STRATEGY_2025.md  LICENSE  MARKET_EVALUATION_2025.md  MFA_IMPLEMENTATION.md  NOTIFICATION_INTEGRATION.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_QUICK_REFERENCE.md  PURPLE_ORANGE_IMPLEMENTATION_STATUS.md  PURPLE_ORANGE_TEAM_PLAN.md  PURPLE_ORANGE_TEAM_README.md  README.md  REMEDIATION_WORKFLOW_IMPLEMENTATION.md  REMEDIATION_WORKFLOW_SUMMARY.md  SECURITY.md  (+17 more)
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  test.yml
config/: loadbalancer.conf  regions.toml
docs/: AI_ML_IMPLEMENTATION.md  AI_QUICK_START.md  COMPETITIVE_STRATEGY_PLAN.md  FEATURE_ROADMAP.md  INCIDENT_RESPONSE.md  MONITORING_SETUP.md  SECURITY_ARCHITECTURE.md  SELF_CONTAINED_ROADMAP.md  STRATEGIC_ROADMAP_TOP3.md  STUB_ELIMINATION_PLAN.md  incident-response.md
docs/agents/: AGENT_PROTOCOL.md  AGENT_STUB.md
docs/legal/: Acceptable_Use_Policy.md  Data_Processing_Agreement.md  End_User_License_Agreement.md  Export_Compliance_Policy.md  Penetration_Testing_Authorization.md  Privacy_Policy.md  Terms_of_Service.md
docs/self-hosted/: configuration.md  installation.md  troubleshooting.md  upgrading.md
docs/status-page/: README.md  index.html
docs/support/: cli-reference.md  faq.md  getting-started.md  troubleshooting.md  web-dashboard.md
docs/whitepapers/: HeroForge_Competitive_Analysis_WhitePaper.md  HeroForge_Novel_Approach_WhitePaper.md  HeroForge_WhitePaper.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/coverage/: index.html
frontend/src/: App.tsx
install/: .env.example  docker-compose.yml  install.sh  uninstall.sh
legal/: ACCEPTABLE_USE_POLICY.md  COOKIE_POLICY.md  DATA_PROCESSING_AGREEMENT.md  PRIVACY_POLICY.md  REFUND_POLICY.md  SECURITY_WHITEPAPER.md  TERMS_OF_SERVICE.md
poc_repository/14cb34ba-3930-4ec2-880a-1cf5cc0f3f09/: v1_738d9b30-7053-4fda-956a-a2eeab8cb52a.txt
poc_repository/23ec2862-0372-4aae-89b8-2d3d93b3343c/: v1_55b0d3b6-5fac-4d28-bcc3-be9a672d2b2b.txt
poc_repository/2642dd45-47de-45cc-b8e1-16a4c3f270c7/: v1_2371b2b6-225f-4eec-bf7b-6f86649c8eb5.txt
poc_repository/5a19eb32-1481-472e-9f0b-2b80ccba496b/: v1_2d8fba5e-83a1-444b-a905-6f67424bd812.txt
poc_repository/69b6904a-3cb1-4c36-91fa-a01f93c3070a/: v1_0cd15b62-5644-4800-8a0a-03f9598ee160.txt
poc_repository/8620e7e6-8ebe-42a0-9499-1c8fc833554b/: v1_a76687bd-f896-4e30-8cf4-851757ef5e19.txt
poc_repository/abcd8ad2-2ce0-4a30-b172-ff2fbb44a6bf/: v1_c1f19142-1765-46bc-b055-222ffafd423e.txt
poc_repository/e299cc8f-4259-47a8-a6f1-ee48388d4d38/: v1_cee3d73f-6ffd-4f07-b8f5-c8fbb99e961d.txt
scripts/: backup.sh  backup_encrypted_db.sh  restore_encrypted_db.sh  screenshot-service.js
src/: config.rs  email_validation.rs  main.rs  password_validation.rs  types.rs
src/agents/: mod.rs  protocol.rs  results.rs  tasks.rs  types.rs
src/ai/: attack_path_interpreter.rs  chat.rs  context.rs  context_builder.rs  features.rs  llm_orchestrator.rs  ml_pipeline.rs  mod.rs  models.rs  prioritization.rs  red_team_advisor.rs  remediation_planner.rs
src/ai_security/: alert_priority.rs  anomaly_detection.rs  fp_prediction.rs  mod.rs  query_parser.rs  types.rs
src/analytics_engine/: batch.rs  correlation.rs  mod.rs  nlp.rs  stream.rs  types.rs  visual_query.rs  warehouse.rs
src/api_governance/: mod.rs  quotas.rs  rate_limiting.rs  types.rs  usage_tracking.rs  versioning.rs
src/asm/: baseline.rs  comparison.rs  mod.rs  monitor.rs  risk_scoring.rs  types.rs
src/backup/: mod.rs
src/bi/: dashboards.rs  export.rs  metrics.rs  mod.rs  reports.rs
src/binary_analysis/: elf_parser.rs  entropy.rs  hashing.rs  mod.rs  packer_detection.rs  pe_parser.rs  strings.rs  types.rs
src/blue_team/: mod.rs
src/c2/: cobaltstrike.rs  havoc.rs  manager.rs  mod.rs  mythic.rs  sliver.rs  types.rs
src/cache/: mod.rs  strategies.rs  ttl.rs
src/communications/: discord.rs  mod.rs  telegram.rs  whatsapp.rs
src/compliance/: analyzer.rs  mod.rs  scanner.rs  scoring.rs  types.rs
src/compliance_automation/: evidence.rs  fedramp.rs  iso27001.rs  mod.rs  soc2.rs  types.rs
src/context/: asset.rs  mod.rs  threat.rs  user.rs
src/cracking/: engine.rs  hashcat.rs  john.rs  mod.rs  types.rs
src/credentials/: discovery.rs  mod.rs  store.rs  types.rs
src/cti_automation/: automated_response.rs  enrichment.rs  mod.rs  sharing.rs  types.rs
src/cve/: cache.rs  mod.rs  nvd_client.rs  offline_db.rs
src/data_lake/: mod.rs  processing.rs  storage.rs  types.rs
src/db/: academy.rs  ad_assessment.rs  agent_mesh.rs  agents.rs  ai.rs  ai_security.rs  analytics.rs  analytics_engine.rs  api_governance.rs  api_security.rs  asm.rs  asset_discovery.rs  assets.rs  attack_paths.rs  audit_files.rs  auth.rs  bas.rs  bi.rs  bloodhound.rs  breach.rs  chat.rs  cicd.rs  client_compliance.rs  cloud.rs  cloud_discovery.rs  compliance_automation.rs  container.rs  cracking.rs  credential_audit.rs  crm.rs  crm_asset_sync.rs  cross_team.rs  cti_automation.rs  data_lake.rs  deception.rs  detection_engineering.rs  devsecops.rs  dlp.rs  dorking.rs  emass.rs  (+61 more)
src/detection_engineering/: coverage.rs  detections.rs  false_positives.rs  mod.rs  testing.rs
src/devsecops/: mod.rs
src/dlp/: mod.rs
wordlists/: db_passwords_aggressive.txt  db_passwords_light.txt  db_users_aggressive.txt  db_users_light.txt  http_dirs_aggressive.txt  http_dirs_light.txt  http_files_aggressive.txt  http_files_light.txt  subdomains_aggressive.txt  subdomains_light.txt
(+1637 files in other folders)
