[package]
name = "heroforge"
version = "0.1.0"
edition = "2021"
authors = ["Your Pentest Team"]
description = "Network triage and reconnaissance tool for penetration testing"

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Network operations
pnet = "0.35"
socket2 = "0.5"
trust-dns-resolver = "0.23"
libc = "0.2"

# IP and network utilities
ipnetwork = "0.20"
cidr-utils = "0.6"

# Output and logging
colored = "2.1"
csv = "1.3"
log = "0.4"
env_logger = "0.11"
prettytable-rs = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client for vulnerability checks
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
scraper = "0.25"
html-escape = "0.2"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.20"
urlencoding = "2.1"
rand = "0.8"
regex = "1.10"
hostname = "0.4"

# Web server
actix-web = "4.12"
actix-cors = "0.7"
actix-files = "0.6"
actix = "0.13"
actix-web-actors = "4.3"
actix-governor = "0.5"
futures-util = "0.3"

# Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
bcrypt = "0.17"

# Email notifications
lettre = "0.11"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "uuid"] }

# SQLCipher for database encryption (overrides sqlx's libsqlite3-sys)
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher"] }

# Database enumeration
mysql_async = "0.36"
mongodb = "3.4"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# SMB enumeration
# Note: SMB enumeration will use external tools (smbclient, enum4linux) via Bash commands

# TOTP-based Two-Factor Authentication
totp-rs = { version = "5.7", features = ["gen_secret", "qr"] }
qrcode = "0.14"
base64 = "0.22"

# Cryptography for security hardening
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"

# Archive support for bulk exports
zip = "2.2"

# SSL/TLS certificate scanning
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.1"
x509-parser = "0.18"
webpki = "0.22"
rustls-native-certs = "0.7"

# OpenAPI/Swagger documentation
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# Cron expression parsing for scheduled scans
cron = "0.12"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
