[package]
name = "heroforge"
version = "0.2.0"
edition = "2021"
authors = ["HeroForge Security Team"]
description = "Network triage and reconnaissance tool for penetration testing"
repository = "https://github.com/genialarchitect/HeroForge"
homepage = "https://heroforge.io"
license = "MIT"
keywords = ["security", "penetration-testing", "reconnaissance", "vulnerability-scanner"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Network operations
pnet = "0.35"
socket2 = "0.5"
trust-dns-resolver = "0.23"
libc = "0.2"

# IP and network utilities
ipnetwork = "0.20"
cidr-utils = "0.6"

# Output and logging
colored = "2.1"
csv = "1.3"
log = "0.4"
env_logger = "0.11"
prettytable-rs = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client for vulnerability checks
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
scraper = "0.25"
html-escape = "0.2"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
rayon = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.20"
lazy_static = "1.5"
parking_lot = "0.12"
urlencoding = "2.1"
rand = "0.8"
regex = "1.10"
fancy-regex = "0.14"
hostname = "0.4"
nix = { version = "0.29", features = ["signal"] }
notify = "6.1"
walkdir = "2.5"

# Web server
actix-web = "4.12"
actix-cors = "0.7"
actix-files = "0.6"
actix = "0.13"
actix-web-actors = "4.3"
actix-governor = "0.5"
actix-multipart = "0.7"
futures = "0.3"
futures-util = "0.3"

# Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
bcrypt = "0.17"

# Email notifications
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

# TLS analysis for free tools
native-tls = "0.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "uuid"] }

# SQLCipher for database encryption (overrides sqlx's libsqlite3-sys)
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher"] }

# Database enumeration
mysql_async = "0.36"
mongodb = "3.4"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# SMB enumeration - Native implementation with external tool fallback
# Uses custom SMB2/3 protocol implementation with NTLM authentication
byteorder = "1.5"  # Binary protocol parsing

# LDAP for Active Directory assessment
ldap3 = "0.11"

# TOTP-based Two-Factor Authentication
totp-rs = { version = "5.7", features = ["gen_secret", "qr"] }
qrcode = "0.14"
base64 = "0.22"
base32 = "0.5"

# Cryptography for security hardening
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
md4 = "0.10"           # NTLM authentication
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
hex = "0.4"

# Archive support for bulk exports
zip = "7.2"

# DEFLATE compression for SAML requests
flate2 = "1.0"

# SSL/TLS certificate scanning
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.1"
x509-parser = "0.18"
webpki = "0.22"
rustls-native-certs = "0.7"

# OpenAPI/Swagger documentation
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# Cron expression parsing for scheduled scans
cron = "0.12"

# AWS SDK for cloud security scanning
aws-config = "1.5"
aws-sdk-iam = "1.64"
aws-sdk-s3 = "1.81"
aws-sdk-ec2 = "1.121"
aws-sdk-rds = "1.121"
aws-credential-types = "1.2"

# Azure SDK for cloud security scanning
azure_core = "0.30"
azure_identity = "0.30"
azure_mgmt_storage = "0.21"
azure_mgmt_compute = "0.21"
azure_mgmt_network = "0.21"
azure_mgmt_authorization = "0.21"

# GCP SDK for cloud security scanning
google-cloud-auth = "1.3"
google-cloud-storage = "1.5"
google-cloud-compute-v1 = "1.0"
google-cloud-iam-v1 = "1.2"
ssh2 = "0.9.5"
tempfile = "3.23.0"
humantime-serde = "1.1.1"
dirs = "6.0.0"
quick-xml = "0.38.4"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

# Binary analysis
goblin = "0.9"           # PE/ELF/Mach-O parsing
memmap2 = "0.9"          # Memory-mapped file access
entropy = "0.4"          # Entropy calculation

# Native password cracking
md5 = "0.7"              # MD5 hashing
des = "0.8"              # DES for LM hash
argon2 = "0.5"           # Argon2 password hashing
scrypt = "0.11"          # scrypt password hashing
pbkdf2 = { version = "0.12", features = ["simple"] }  # PBKDF2 key derivation
num_cpus = "1.16"        # CPU count for parallel processing

# Cryptographic signatures for plugin verification
ed25519-dalek = { version = "2.1", features = ["rand_core"] }  # Ed25519 signatures
rsa = "0.9"                    # RSA signatures for GPG compatibility

# WebAssembly runtime for plugin sandboxing
wasmtime = "27.0"              # WASM runtime
wasmtime-wasi = "27.0"         # WASI support for WASM
os_pipe = "1.2"                # Cross-platform pipes for I/O capture

# Packet capture for wireless scanning
pcap = "2.2"                   # libpcap bindings for packet capture

# IDN/punycode handling for domain reputation analysis
idna = "1.0"
sentry = "0.46.1"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
serial_test = "3.0"
tempfile = "3.23.0"
